Fix layout issues

--- a/src/Main.css
+++ b/src/Main.css
@@ -1,6 +1,5 @@
 .Main {
   height: 100vh;
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
 }
